@@ -48,7 +48,7 @@ Explanation of fields:
 
 \fB<priority>\fR - an alphabetic character (A-Z) A = highest priority
 .br
-\fB<ext>\fR - txt for normal text SMS
+\fB<ext>\fR - txt for normal text SMS, smsbackup for SMS backup fromat used by gammu
 .br
 \fB<options>\fR - Options appended to the extension applying to text SMS:
  \fBd\fR - delivery report requested
