@@ -22,6 +22,7 @@ ChangeLog
 2009???? - 1.27.90
 
 [-] * Simplify code in FILES smsd service.
+[-] * FILES service can send smsbackup messages.
     
 20091222 - 1.27.0
     
